--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class =box1>
-
+    <h1>WELCOME TO MY SPACE GALAXY </h1>
+    <div class="bh">
+    <img src="atak.gif" alt="float-planet">
     </div>
-    <div class="box2">
-        <div class="b1"></div>
-        <div class="b2"></div>
-    </div>
+    <div class="bh1">
+        <img src="mix.gif" alt="float-planet">
+     </div>
+     <div class="bh2">
+        <img src="orange.gif" alt="float-planet">
+     </div>
+    
+    
 </body>
 </html>
